--- a/package.json
+++ b/package.json
@@ -13,7 +13,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/code": "^2.9.3",
+    "@editorjs/delimiter": "^1.4.2",
+    "@editorjs/embed": "^2.7.6",
     "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.1",
+    "@editorjs/inline-code": "^1.5.1",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/list": "^2.0.2",
+    "@editorjs/marker": "^1.4.0",
+    "@editorjs/nested-list": "^1.4.3",
+    "@editorjs/quote": "^2.7.6",
+    "@editorjs/raw": "^2.5.1",
+    "@editorjs/simple-image": "^1.6.0",
+    "@editorjs/table": "^2.4.3",
+    "@editorjs/underline": "^1.2.1",
+    "@editorjs/warning": "^1.4.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^17.0.21",
@@ -23,6 +39,11 @@
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
     "css-loader": "^6.11.0",
+    "editorjs-alert": "^1.1.4",
+    "editorjs-drag-drop": "^1.1.16",
+    "editorjs-text-alignment-blocktune": "^1.0.3",
+    "editorjs-text-color-plugin": "^2.0.4",
+    "editorjs-undo": "^2.0.28",
     "file-loader": "^6.2.0",
     "hbs": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
