--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "editorjs-blocks-react-renderer": "^1.3.0",
     "jsonwebtoken": "^9.0.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
