--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --env port=3000",
+  "start": "node scripts/start-dev.js",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "server": "json-server --watch db.json --port 8000"
@@ -60,7 +60,7 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.30.7",
